adjust figure center and figcaption font size

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -7,6 +7,16 @@ abbr {
   cursor: help;
 }
 
+figure{
+  text-align:center;
+}
+
+figure figcaption{
+  font-size: .75rem;
+  padding-top:.5em;
+  opacity: .5;
+}
+
 p {
   color: #333;
   line-height: 1.5;
